# These files will end up in the install include directory
# For example, /usr/include
include_HEADERS = rl_network_message.hpp \
                  rl_service_gateway_delegate.hpp \
                  rl_connection_stub.hpp \
                  rl_networkmessage_extractor_base.hpp \
                  rl_tcpconnection.hpp \
                  rl_handler_thread_pool.hpp \
                  rl_queue.hpp rl_tcpserver.hpp \
                  rl_message_dispatcher.hpp \
                  rl_service_gateway.hpp \
                  rl_app_base.hpp